# etler

./: .gitignore  Pipfile  pyproject.toml  setup.py
docs/_build/doctrees/: environment.pickle  etler.doctree  etler.extract.doctree  etler.load.doctree  etler.transform.doctree  index.doctree
etler/: __init__.py
etler/load/: logger.py
etler/transform/: cutter.py
tests/: test_etler.py
