[tool.poetry]
name = "etler"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Sasha Illarionov <sasha@sdll.space>"]
homepage = "https://github.com/sdll/etler"
classifiers = [ "Development Status :: 2 - Pre-Alpha",
                "License :: OSI Approved :: MIT License",
                "Programming Language :: Python",
                "Programming Language :: Python :: 2",
                "Programming Language :: Python :: 2.7",
                "Programming Language :: Python :: 3",
                "Programming Language :: Python :: 3.4",
                "Programming Language :: Python :: 3.5",
                "Programming Language :: Python :: 3.6",
                "Programming Language :: Python :: 3.7" ]



[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.24.2"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
sphinx = "^2.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
flake8 = "^3.7"
mypy = "^0.701.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
